# rust-kit

./: .env  Cargo.toml
http/: auth.http  users.http
migrations/: 20250329180720_users_table.sql
src/: handlers.rs  main.rs  utils.rs
src/handlers/: auth_handler.rs  users_handler.rs
src/models/: user.rs
src/utils/: extractor.rs  validation.rs
