[package]
name = "rust-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4.40", features = ["serde"] }
convert_case = "0.8.0"
dotenvy = "0.15.7"
password-auth = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace","cors"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
validator = { version = "0.20.0", features = ["derive"] }
